--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-    <div class="para mt-2 mb-4 w-100">
-        <h2>Todo List</h2>
+    <div class="para mb-4 w-100">
+        <h2>My ToDo List</h2>
     </div>
     <div class="container text-center">
         <form class="d-flex flex-wrap mb-3 justify-content-center row">
             <div class="col-5">
                 <input type="text" class="form-control title mb-1" aria-describedby="title" placeholder="Title"
-                    required>
+                    autofocus required>
                 <textarea class="form-control" placeholder="Description" style="height: 100px" required></textarea>
             </div>
             <!-- <div class="col-8">
@@ -45,7 +45,7 @@
             </thead>
         </table>
     </div>
-    <footer class="mt-5 p-3 h6">All copyrights <span class="text-info">&copy;</span> Anas Elwogoud <a
+    <footer class="mt-5 p-3 h6 m-0">All copyrights <span class="text-info">&copy;</span> Anas Elwogoud <a
             href="https://www.linkedin.com/in/anas-elwogoud-elsayed-b43080217/"><i
                 class="fa-brands fa-linkedin px-2 text-info"></i></a> <a href="https://www.facebook.com/MazenEgy/"><i
                 class="fa-brands fa-facebook pe-2 text-info"></i></a><a href="mailto:anaselwogoud74@gmail.com"><i
